# hartree-fock-cpp

./: .gitignore  CMakeLists.txt  README.md  plot.py  plot_bsplines.py  plot_knotpoint.py  plot_radial_function.py
src/: Bsplines.cpp  Bsplines.h  ComplexType.cpp  ComplexType.h  Eigenproblems.cpp  Eigenproblems.h  FileIO.cpp  FileIO.h  GaussLegendre.cpp  GaussLegendre.h  Grid.cpp  Grid.h  HartreeFock.cpp  HartreeFock.h  LapackCommon.h  LapackUtility.cpp  LapackUtility.h  LinearEquations.cpp  LinearEquations.h  MKL_include_and_define.h  MKL_utility_linear_algebra.cpp  MKL_utility_linear_algebra.h  Matrix.cpp  Matrix.h  Parameters.cpp  Parameters.h  Vector.cpp  Vector.h  custom_asserts.h  linear_algebra_typedefs.h  logger.cpp  logger.h  main.cpp  old_main.cpp  temporary_tests.h  testing_mkl.cpp  typedefs.h
uppg5code/py/: #Bmatrix_test.py#  Bmatrix_test.py  Hmatrix.py  Hmatrix_maybeWork.py  analyticpsi.py  bspline_knot_functs.py  eigencomp.py  eigenvals1.py  eigenvals2.py  eigenvals3.py  eigenvals4.py  eigenvals5.py  eigenvals6.py  eigenvals7.py  eigenvals8_nolcomp.py  eigenvalsZcomp.py  eigenvalsZlcomp.py  eigvals7_lcomp.py  globals.py  knotpttest.py  start1.py  transposetest.py
uppg5code/py/oldHmatrix/: Hmatrix.py  Hmatrix1.py  Hmatrix2.py  Hmatrix3.py  Hmatrix_rangetest.py
